[Safari] Fix distorted header image

--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -30,7 +30,6 @@
 .home
   .hero
     img
-      max-width none !important
       max-height 40rem !important
       margin 0 !important
 
